본문바로가기 추가

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 
 <body>
 
+    <div class="skip">
+        <a href="#section">
+            본문바로가기
+        </a>
+    </div>
+
     <header id="header">
         <div class="topmenu">
             <div class="row">
