--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <!-- [if lt IE 9]>
          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <![endif] -->
-    <!--[if IE]>
-    <![endif]-->
+
 </head>
 
 <body>
@@ -35,15 +34,15 @@
                     </a>
                 </div>
                 <div class="login">
-                    <a href="#">로그인</a>
-                    <a href="#">회원가입</a>
+                    <a href="./login.html" target="_blank">로그인</a>
+                    <a href="./join.html" target="_blank">회원가입</a>
                     <a href="#">회원1:1문의</a>
                 </div>
             </div>
         </div>
         <div class="logoNav row">
             <h1>
-                <a href="#">CompanyName</a>
+                <a href="./index.html">CompanyName</a>
             </h1>
             <nav class="nav">
                 <ul class="depth1 cf">
