회원가입 주소까지 수정

--- a/join.html
+++ b/join.html
@@ -108,7 +108,7 @@
                         <li>
                             <label for="name_lbl" class="tit_lbl pilsoo_item">작성자명</label>
                             <div class="info_content">
-                                <input class="w320" type="text" id="name_lbl" placeholder="이름을 입력해주세요">
+                                <input class="w320" type="text" id="name_lbl" placeholder="이름을 입력해주세요" required>
                             </div>
                         </li>
                         <li>
@@ -144,8 +144,17 @@
                                 </select>
                             </div>
                         </li>
+                        <li>
+                            <label for="addr_lbl" class="tit_lbl">주소</label>
+                            <div class="info_content">
+                                <input type="text" id="addr_lbl" class="w160" placeholder="주소 입력">
+                                <button type="button">우편번호</button> <br>
+                                <input type="text" id="addr1" class="w70p mtb3"> (도로명주소) <br>
+                                <input type="text" id="addr2" class="w70p mtb3"> (지번주소) <br>
+                                <input type="text" id="addr3" class="w70p mtb3"> (나머지주소)
 
-                        
+                            </div>
+                        </li>
                     </ul>
                 </fieldset>
             </form>
@@ -198,8 +207,7 @@
             </div>
         </div>
     </footer>
-
-
+    
 </body>
 
 </html>
