--- a/join.html
+++ b/join.html
@@ -147,15 +147,59 @@
                         <li>
                             <label for="addr_lbl" class="tit_lbl">주소</label>
                             <div class="info_content">
-                                <input type="text" id="addr_lbl" class="w160" placeholder="주소 입력">
+                                <input type="text" id="addr_lbl" class="w160 mtb5" placeholder="주소 입력">
                                 <button type="button">우편번호</button> <br>
-                                <input type="text" id="addr1" class="w70p mtb3"> (도로명주소) <br>
-                                <input type="text" id="addr2" class="w70p mtb3"> (지번주소) <br>
-                                <input type="text" id="addr3" class="w70p mtb3"> (나머지주소)
+                                <input type="text" id="addr1" class="w70p mtb5"> <span>(도로명주소) </span><br>
+                                <input type="text" id="addr2" class="w70p mtb5"> <span>(지번주소)</span> <br>
+                                <input type="text" id="addr3" class="w70p"> <span>(나머지주소)</span>
+                            </div>
+                        </li>
+                        <li>
+                            <label for="birthday" class="tit_lbl">생년월일</label>
+                            <div class="info_content">
+                                <!-- 날짜라서 type을 date로 바꿀수도 있으나 -->
+                                <!-- IE를 지원하지 않기에, 추후 JS로 풀기로 함 -->
+                                <input type="text" id="birthday" class="w160" placeholder="2000-01-01">
+                            </div>
+                        </li>
+                        <li>
+                            <label for="" class="tit_lbl">성별</label>
+                            <div class="info_content gender_area">
+                                <!-- input에 height값을 안주신다. -->
+                                <input type="radio" name="gender" id="male" value="남자">
+                                <label for="male">남자</label>
+                                <input type="radio" name="gender" id="female" value="여자">
+                                <label for="female">여자</label>
+                            </div>
+                        </li>
+                        <li>
+                            <label for="" class="tit_lbl">취미</label>
+                            <div class="info_content hobby_area">
+                                <input type="checkbox" name="" id="all">
+                                <label for="">전체선택</label>
+                                <input type="checkbox" name="hobby1" id="hobby1" value="게임">
+                                <label for="">게임</label>
+                                <input type="checkbox" name="hobby2" id="hobby2" value="등산">
+                                <label for="">등산</label>
+                                <input type="checkbox" name="hobby3" id="hobby3" value="수영">
+                                <label for="">수영</label>
 
                             </div>
                         </li>
+                        <li>
+                            <label for="query" class="tit_lbl">문의내용</label>
+                            <div class="info_content ">
+                                <textarea name="query" class="w70p" id="query" placeholder="간단한 상담 요청 사항을 남겨주시면, 보다 상세한 상담이 가능합니다.
+전화상담 희망시, 기재 부탁드립니다(20 글자 이내)" maxlength="20"></textarea>
+                                <p>남은 글자 : <span>20</span>글자</p>
+                            </div>
+                        </li>
                     </ul>
+                    <div class="btn">
+                        <input type="submit" value="전송">
+                        <input type="reset" value="취소">
+                    </div>
+                    
                 </fieldset>
             </form>
         </div>    
