회원가입 날짜 수정

--- a/join.html
+++ b/join.html
@@ -157,24 +157,24 @@
                         <li>
                             <!-- 날짜라서 type을 date로 바꿀수도 있으나 -->
                             <!-- IE를 지원하지 않기에, 추후 JS로 풀기로 함 -->
-                            
-                            <label for="" class="tit_lbl">생년월일</label>
+
+                            <label for="" class="year tit_lbl">생년월일</label>
                                 <div class="info_content">
                                     <input type="text" id="year" class="w100" placeholder="년">
                                     <select name="month" id="month">
                                         <option value="nochoice">월</option>
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                        <option value="9">9</option>
-                                        <option value="10">10</option>
-                                        <option value="11">11</option>
-                                        <option value="12">12</option>
+                                        <option value="1">1월</option>
+                                        <option value="2">2월</option>
+                                        <option value="3">3월</option>
+                                        <option value="4">4월</option>
+                                        <option value="5">5월</option>
+                                        <option value="6">6월</option>
+                                        <option value="7">7월</option>
+                                        <option value="8">8월</option>
+                                        <option value="9">9월</option>
+                                        <option value="10">10월</option>
+                                        <option value="11">11월</option>
+                                        <option value="12">12월</option>
                                     </select>
                                     <input type="text" id="date" class="w100" placeholder="일">
                                 </div>
