--- a/login.html
+++ b/login.html
@@ -96,9 +96,35 @@
         </div>
     </header>
 
-    <section id="loginPage">
-        로그인페이지
+    <section id="login_page">
+        <div class="login_box row">
+            <h2>로그인</h2>
+            <form action="#" method="post" class="login_form">
+                <fieldset>
+                    <legend>로그인</legend>
+                    <p class="comment">※ ID와 PW는 인포21 ID/PW를 입력하세요.</p>
+                    <p class="comment">※ 아이디/비밀번호를 잊으셨나요? 경희대학교 통합로그인 센터에서 아이디, 비밀번호를 확인하세요.</p>
+                    <div class="login_content">
+                        <div class="idpw_box">
+                            <label for="id_lbl">아이디</label>
+                            <input type="text" id="id_lbl" placeholder="아이디/학번"><br>
+                            <label for="pw_lbl">비밀번호</label>
+                            <input type="password" id="pw_lbl" placeholder="비밀번호">
+                        </div>
+                        <button type="submit">로그인</button>
+                        <div class="check">
+                            <input type="checkbox" id="idsave" value="idsave" checked>
+                            <label for="idsave">아이디 저장</label>
+                            <input type="checkbox" id="secacc" value="secacc">
+                            <label for="secacc">보안접속</label>
+                        </div>
+                    </div>
+
+                </fieldset>
+            </form>
+        </div>
     </section>
+
 
     <footer id="footer">
         <div class="footerMenu">
@@ -149,5 +175,4 @@
 
 
 </body>
-
 </html>
