--- a/login.html
+++ b/login.html
@@ -117,6 +117,7 @@
                             <label for="idsave">아이디 저장</label>
                             <input type="checkbox" id="secacc" value="secacc">
                             <label for="secacc">보안접속</label>
+                            <a href="./join.html" target="_blank">회원가입</a>
                         </div>
                     </div>
 
