검색창 생성

--- a/join.html
+++ b/join.html
@@ -21,7 +21,7 @@
         </a>
     </div>
 
-    <header id="header">
+   <header id="header">
         <div class="topmenu">
             <div class="row">
                 <div class="sns">
@@ -32,6 +32,19 @@
                     <a href="#"><i class="fas fa-sms"></i>
                         <span class="blind">문자전송</span>
                     </a>
+                </div>
+                <!-- 검색상자 만들기 / 스타일 자유 -->
+                <div class="search_box">
+                    <form action="#" method="get">
+                        <fieldset>
+                            <legend>검색창</legend>
+                            <input type="text" placeholder="검색어 입력">
+                            <button type="submit">
+                                <span class="blind">클릭해서 검색하기</span>
+                                <i class="fas fa-search"></i>
+                            </button>
+                        </fieldset>
+                    </form>
                 </div>
                 <div class="login">
                     <a href="./login.html">로그인</a>
