--- a/index.html
+++ b/index.html
@@ -35,9 +35,22 @@
                         <span class="blind">문자전송</span>
                     </a>
                 </div>
+                <!-- 검색상자 만들기 / 스타일 자유 -->
+                <div class="search_box">
+                    <form action="#" method="get">
+                        <fieldset>
+                            <legend>검색창</legend>
+                            <input type="text" placeholder="검색어 입력">
+                            <button type="submit">
+                                <span class="blind">클릭해서 검색하기</span>
+                                <i class="fas fa-search"></i>
+                            </button>
+                        </fieldset>
+                    </form>
+                </div>
                 <div class="login">
-                    <a href="./login.html" target="_blank">로그인</a>
-                    <a href="./join.html" target="_blank">회원가입</a>
+                    <a href="./login.html">로그인</a>
+                    <a href="./join.html">회원가입</a>
                     <a href="#">회원1:1문의</a>
                 </div>
             </div>
