검색창수정/뷰포트추가

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
     <title>새싹유치원</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
@@ -37,7 +37,7 @@
                 </div>
                 <!-- 검색상자 만들기 / 스타일 자유 -->
                 <div class="search_box">
-                    <form action="#" method="get">
+                    <form action="#" method="post">
                         <fieldset>
                             <legend>검색창</legend>
                             <input type="text" placeholder="검색어 입력">
