--- a/join.html
+++ b/join.html
@@ -21,7 +21,7 @@
         </a>
     </div>
 
-   <header id="header">
+    <header id="header">
         <div class="topmenu">
             <div class="row">
                 <div class="sns">
@@ -35,7 +35,7 @@
                 </div>
                 <!-- 검색상자 만들기 / 스타일 자유 -->
                 <div class="search_box">
-                    <form action="#" method="get">
+                    <form action="#" method="post">
                         <fieldset>
                             <legend>검색창</legend>
                             <input type="text" placeholder="검색어 입력">
@@ -108,6 +108,8 @@
             </nav>
         </div>
     </header>
+
+
 
     <!-- 회원가입페이지 -->
     <section id="join_page">
