--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
                 </div>
                 <!-- 검색상자 만들기 / 스타일 자유 -->
                 <div class="search_box">
-                    <form action="#" method="get">
+                    <form action="#" method="post">
                         <fieldset>
                             <legend>검색창</legend>
                             <input type="text" placeholder="검색어 입력">
@@ -108,6 +108,7 @@
             </nav>
         </div>
     </header>
+
 
     <section id="login_page">
         <div class="login_box row">
