--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, minimum-scale=0.5">
     <title>새싹유치원</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
@@ -59,6 +59,15 @@
             <h1>
                 <a href="./index.html">CompanyName</a>
             </h1>
+            <div class="open_nav">
+                <span class="blind">메뉴열기</span>
+                <i class="fas fa-bars"></i>
+            </div>
+            <div class="close_nav">
+                <span class="blind">메뉴닫기</span>
+                <i class="fas fa-times"></i>
+            </div>
+
             <nav class="nav">
                 <ul class="depth1 cf">
                     <li><a href="#">Home</a></li>
