--- a/login.html
+++ b/login.html
@@ -21,6 +21,7 @@
         </a>
     </div>
 
+  
     <header id="header">
         <div class="topmenu">
             <div class="row">
@@ -57,6 +58,15 @@
             <h1>
                 <a href="./index.html">CompanyName</a>
             </h1>
+            <div class="open_nav">
+                <span class="blind">메뉴열기</span>
+                <i class="fas fa-bars"></i>
+            </div>
+            <div class="close_nav">
+                <span class="blind">메뉴닫기</span>
+                <i class="fas fa-times"></i>
+            </div>
+
             <nav class="nav">
                 <ul class="depth1 cf">
                     <li><a href="#">Home</a></li>
@@ -108,6 +118,7 @@
             </nav>
         </div>
     </header>
+
 
 
     <section id="login_page">
